<resources>
    <string name="app_name">Hydrangea</string>
    <string name="email_signIn">Введите ваш email</string>
    <string name="password_sign_in">Введите пароль</string>
    <string name="sign_in_Btn">Войти</string>
    <string name="registr_sign_in">Вы еще не зарегистрированы? Зарегистрируйтесь</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="emailSignUp">Введите email</string>
    <string name="passwordSignUp">Введите пароль</string>
    <string name="repeatPassSignUp">Повторите пароль</string>
    <string name="SignUpBtnText">Зарегистрироваться</string>
    <string name="TextToSignIn">Вы уже зарегистрированы, войдите в учетную запись</string>
    <string name="loginLabel">Логин</string>
    <string name="passLabel">Пароль</string>
    <string name="confirmPassLabel">Подтверждение пароля</string>
    <string name="title_activity_order_flowers">orderFlowers</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>